[package]
name = "icefunprog"
version = "0.2.0"
edition = "2021"

[[bin]]
name = "icefunprog"
path = "src/icefunprog.rs"

[lib]
name = "icefun"
path = "src/lib/lib.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
clap = { version = "4.4", features = ["derive"] }
env_logger = "0.10"
log = "0.4"
serialport = "4.3"
