[package]
name = "icefunprog"
version = "0.3.0"
edition = "2021"

[lints.clippy]
pedantic = "warn"

[workspace]

[dependencies]
icefun = { path = "icefun" }
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
serialport = "4.3"
parse_int = "0.6"
tracing = "0.1"
tracing-subscriber = "0.1"
