[package]
name = "icefunprog"
version = "0.3.0"
edition = "2021"

[lints.clippy]
pedantic = "warn"

[workspace]

[dependencies]
icefun = { path = "icefun" }
anyhow = "1.0.82"
clap = { version = "4.5.4", features = ["derive"] }
serialport = "4.3.0"
parse_int = "0.6.0"
tracing = "0.1.40"
tracing-subscriber = "0.1.6"
